
This document provides a high-level view of the changes introduced in Asciidoctor by release.
For an even more detailed look at what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

This project utilizes semantic versioning.

// tag::compact[]
== 2.0.15 (2021-04-27) - @mojavelinux

Bug Fixes::

  * Don't include trailing period, question mark, or exclamation point in target (URL) of autolink (#3860)
  * Don't assign nil value to named attribute mapped to absent positional attribute when parsing attrlist (#4033)
  * Remove leading and trailing spaces around role on inline phrase (#4035)
  * Ignore empty role on inline phrase defined using legacy syntax and followed by comma (#4035)
  * Use xreftext on document as fallback link text in HTML output for inter-document xref that resolves to current document when no link text is provided (#4032)
  * Use xreftext on document as fallback link text in HTML output for internal xref with empty fragment when no link text is provided (#4032)
  * Use document ID as linkend in DocBook output for internal xref with empty fragment; auto-generating one if necessary (#4032)

Improvements::

  * Format keyboard references in monospace in manpage output

Build / Infrastructure::

  * Get remaining invoker tests working on JRuby 9.1 for Windows

// end::compact[]
== 2.0.14 (2021-04-19) - @mojavelinux

Bug Fixes::

  * Don't allow AsciiDoc table cell to set document attribute that was unset from the API (exceptions include: `compat-mode`, `toc`, `showtitle`, and `notitle`) (#4017)
  * Ensure default document attributes unset in parent document remain unset in AsciiDoc table cell (#2586)
  * Allow the `showtitle` / `notitle` attribute to be toggled in an AsciiDoc table cell if set or unset in parent document (#4018)
  * Ensure mtime of input file honors TZ environment variable on JRuby for Windows (affects value of `docdatetime` attribute) (#3550)